# Operation_Better_Block

./: README.md  pyproject.toml
operation_better_block/: dataintegration.py
