[project]
name = "operation-better-block"
version = "0.1.0"
description = ""
authors = [
    {name = "sara-kelemen",email = "skk264@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=1.13.0,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
